--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <button id="addTaskBtn" class="btn btn-primary w-100">Add Task</button>
                         </div>
                     </div>
-                    <ol id="taskList" class="list-group mt-3"></ol>
+                    <ul id="taskList" class="list-group mt-3"></ul>
                     <button id="clearTaskBtn" class="btn btn-danger w-100 mt-3">Clear All Tasks</button>
                 </div>
             </div>
